# ica_integrations_host-main

./: .bumpversion.cfg  .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .pylintrc  .pyre_configuration  .shellcheckrc  .spellcheck-en.txt  .travis.yml  .travis.yml.nodocker  CODEOWNERS  Containerfile  Containerfile.fedora  Containerfile.fedora.dockerignore  Containerfile.nosdv  Containerfile.sdv  DEVELOPING.md  DOD.md  Dockerfile.autogen  LICENSE.md  Makefile  README.md  TODO.md  gunicorn.config.py  mypy.ini  pyproject.toml  pytest.ini  pytype.toml  run-gunicorn.sh  sonar-code.properties  tox.ini  whitesource.config  whitesource.config.old
app/: server.py
app/agents/: agent_context.py  agent_utilities.py  input_model.py  output_model.py
app/routes/agent_copilot/: README.md  __init__.py  agent_copilot_router.py
app/routes/agent_crewai/: README.md  __init__.py  agent_crewai_router.py  chat_gui_demo.py
app/routes/agent_langchain/: README.md  agent_langchain_router.py  agent_model.py  agent_prompt_template.py  langchain_tools.py
app/routes/agent_llamaindex/: README.md  agent_llamaindex_router.py  agent_model.py  agent_prompt_template.py  index.py  llamaindex_tools.py
app/routes/amazon_q/: README.md  __init__.py  amazon_q_router.py
app/routes/ask_assistant/: README.md  __init__.py  ask_assistant_router.py
app/routes/ask_docs/: README.md  __init__.py  ask_docs_router.py
app/routes/ask_prompts/: README.md  __init__.py  ask_prompts_router.py
app/routes/assistant_builder/: README.md  __init__.py  assistant_builder_router.py
app/routes/assistant_executor/: README.md  assistant_executor_router.py
app/routes/assistant_finder/: README.md  assistant_finder_router.py
app/routes/assistant_reviewer/: README.md  assistant_reviewer_router.py
app/routes/asvs_chat/: README.md  __init__.py  asvs_chat_router.py
app/routes/batch_execution/: README.md  __init__.py  batch_execution_router.py
app/routes/chart/: README.md  chart_router.py  config.py  models.py
app/routes/code_splitter/: README.md  __init__.py  code_forge_api_client.py  code_splitter_router.py  ica_code_forge.py  language_config.json  requirements.txt
app/routes/compare/: README.md  __init__.py  compare_router.py
app/routes/csv_chat/: README.md  __init__.py  csv_chat_router.py
app/routes/datagenerator/: README.md  __init__.py  datagenerator_router.py
app/routes/docbuilder/: README.md  __init__.py  docbuilder_router.py
app/routes/file_retriever/: README.md  fiile_retriever_tool.py  file_retriever_router.py
app/routes/file_upload/: README.md  __init__.py  file_upload_router.py
app/routes/firefly/: README.md  firefly_router.py
app/routes/github/: README.md  __init__.py  github_router.py
app/routes/googlesearch/: README.md  googlesearch_router.py
app/routes/gpt4vision/: README.md  __init__.py  gpt4vision_router.py
app/routes/health/: health_router.py
app/routes/icaat_demystifierteam/: README.md  icaat_demystifierteam_router.py
app/routes/jira/: README.md  __init__.py  jira_router.py
app/routes/jokes/: README.md  jokes_router.py
app/routes/local_document_retriever/: README.md  __init__.py  local_document_retriever_router.py
app/routes/local_load_csv_chat/: README.md  __init__.py  local_load_csv_chat_router.py
app/routes/mermaid/: README.md  __init__.py  mermaid_router.py
app/tools/: get_crewai_tools.py  get_langchain_tools.py  get_llamaindex_tools.py  global_tools.json  prompt_template.py
app/utilities/: ica_faiss.py  request_utilities.py
attic/: asgi.py  datagenerator_router copy.py  refactored_qareact_router.py
attic/remote_tool_calling/: agent-calling.json  config.yml  tools.yml
attic/test/: config.dev  config.performance.json  config_docbuilder_performance.json
build-scripts/: update_apps.sh
docs/: .gitignore  Makefile  README.md  base.yml  mkdocs.yml  requirements.txt
docs/docs/: .gitignore  .pages  README.md  index.md
docs/includes/: abbreviations.md
docs/theme/: extra-uml.css  extra-uml.js  extra.css  flowchart.min.js.map  mermaid.min.js  sequence-diagram-min.js.map
templates/: corporate_strategy_template.pptx  default.pptx  ibm_consulting_blue.pptx  ibm_consulting_green.pptx  ibm_technology_blue.pptx  ibm_technology_green.pptx  oic_template.pptx  sih_template.pptx  validate.py
templates/app_route/: cookiecutter.json  route_builder.py
test/: README.md  config.json  crew-ai-test.json  debug_boomerang.sh  test-concurrency.py
test/jmeter/: ICA_Integration_Ingress_Tests_SA.jmx  ica_integrations_host.jmx
test/routes/: mermaid.json  plantuml.json
tests/: ask_assistant_router_test.py  ask_docs_router_test.py  ask_prompts_router_test.py  assistant_builder_router_test.py  assistant_executor_router_test.py  assistant_finder_router_test.py  assistant_reviewer_router_test.py  autogen_mail_generator_router_test.py  autogen_news_webscraper_router_test.py  autogen_newsletter_generator_router_test.py  autogen_translator_router_test.py  chart_router_test.py  compare_router_test.py  conftest.py  csv_chat_router_test.py  docbuilder_router_test.py  duckduckgo_router_test.py  file_upload_router_test.py  github_router_test.py  googlesearch_router_test.py  gs_agents_test.py  jokes_router_test.py  mermaid_router_test.py  model_router_test.py  ms_teams_router_test.py  nvidia_router_test.py  pii_masker_router_test.py  plantuml_router_test.py  plotly_router_test.py  prompt_defender_router_test.py  python_executor_router_test.py  retriever_website_test.py  summarizer_route_test.py  test_cases_agent_router_test.py  userstory_excel_mapper_router_test.py  webex_router_test.py  wikipedia_router_test.py  xlsx_builder_router_test.py  xlsx_builder_test.py
tools/delete_old_files/: delete_old_files_job.py
tools/docsgen/: config.py  docsgen.py
tools/kubeplay/: ica_integrations_host-service.yaml
tools/streaming-ui/: README.md  agent-tools.py  chain-api.py  chain.py  chainlit.md  integrations.json  ollama_client.py  ollama_client_async.py  requirements.txt  streaming-ui.py
tools/watson-orchestrate/: requirements.txt  svg_to_json.py  svg_to_json.sh
(+653 files in other folders)
